--- a/Ubiquitous2/App.xaml
+++ b/Ubiquitous2/App.xaml
@@ -4,6 +4,7 @@
              xmlns:vm="clr-namespace:UB.ViewModel"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:settings="clr-namespace:UB.Properties"
              xmlns:Fluent="clr-namespace:Fluent;assembly=Fluent" x:Class="UB.App"
              StartupUri="MainWindow.xaml"
              mc:Ignorable="d">
@@ -19,8 +20,8 @@
     		<vm:ViewModelLocator x:Key="Locator"
     			d:IsDataSource="True" />
 
-    	</ResourceDictionary>
-
+            <settings:Ubiqiutous x:Key="Settings" />
+        </ResourceDictionary>
     </Application.Resources>
     
 </Application>
