--- a/Ubiquitous2/MainWindow.xaml
+++ b/Ubiquitous2/MainWindow.xaml
@@ -1,43 +1,24 @@
-﻿<Window xmlns:View="clr-namespace:UB.View" 
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+﻿<Window xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:dc="clr-namespace:Devart.Controls"
         xmlns:ignore="http://www.ignore.com"
         xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
         xmlns:Custom="http://www.galasoft.ch/mvvmlight"
         x:Class="UB.MainWindow"
         mc:Ignorable="d ignore"
-        Height="379.15"
-        Width="458"
-        Title="Ubiquitous 2.0" Icon="ubiquitous smile.ico"
-        >
+        Height="{Binding Source={StaticResource Settings}, Path=Default.MainWindowHeight, Mode=TwoWay}"
+        Width="{Binding Source={StaticResource Settings}, Path=Default.MainWindowWidth, Mode=TwoWay}"
+        Title="Ubiquitous 2.0" Icon="ubiquitous smile.ico" Style="{DynamicResource MainWindowStyle}"
+        DataContext="{Binding Source={StaticResource Locator},Path=Main}"
+        >    
+   
+    <i:Interaction.Triggers>
+        <i:EventTrigger EventName="Closing">
+            <Custom:EventToCommand Command="{Binding ExitApplication}"/>
+        </i:EventTrigger>
+    </i:Interaction.Triggers>
 
-    <Window.DataContext>
-        <Binding Path="Main" Source="{StaticResource Locator}"/>
-    </Window.DataContext>
 
-    <Grid x:Name="LayoutRoot" Background="#FF09210A">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="104*"/>
-            <RowDefinition Height="31*"/>
-        </Grid.RowDefinitions>
-        <View:ChatBoxView Margin="3,0" RenderTransformOrigin="1,0" OverridesDefaultStyle="True" Padding="0"/>
-        <Button Content="Add test message" HorizontalAlignment="Left" Margin="10,0,0,10" Grid.Row="1" VerticalAlignment="Bottom" Width="111">
-            <i:Interaction.Triggers>
-                <i:EventTrigger EventName="Click">
-                    <Custom:EventToCommand Command="{Binding AddMessage}"/>
-                </i:EventTrigger>
-            </i:Interaction.Triggers>
-        </Button>
 
-        <Button Content="Open settings" HorizontalAlignment="Left" Margin="138,0,0,10" Grid.Row="1" VerticalAlignment="Bottom" Width="127">
-            <i:Interaction.Triggers>
-                <i:EventTrigger EventName="Click">
-                    <Custom:EventToCommand Command="{Binding ShowSettings}"/>
-                </i:EventTrigger>
-            </i:Interaction.Triggers>
-        </Button>
-    </Grid>
 </Window>
