--- a/Ubiquitous2/SettingsWindow.xaml
+++ b/Ubiquitous2/SettingsWindow.xaml
@@ -2,13 +2,10 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:fluent="clr-namespace:Fluent;assembly=Fluent"
-        xmlns:local="clr-namespace:UB" x:Class="UB.SettingsWindow"
+        xmlns:local="clr-namespace:UB"
         xmlns:devart="clr-namespace:Devart.Controls"
+        xmlns:View="clr-namespace:UB.View" x:Class="UB.SettingsWindow"
         Title="SettingsWindow" Height="205" Width="445" Icon="ubiquitous smile.ico">
-
-    <Window.DataContext>
-        <Binding Path="Settings" Source="{StaticResource Locator}"/>
-    </Window.DataContext>
 
     <Window.Resources>
         <Style TargetType="{x:Type VirtualizingStackPanel}">
@@ -19,47 +16,36 @@
         </Style>
     </Window.Resources>
 
-    <Grid>
-        <fluent:BackstageTabControl SelectedIndex="0" Style="{DynamicResource SettingsStyle}" Background="#FF323232">            
-            <fluent:BackstageTabItem Header="Chat" Background="#FF646464">
-                <ScrollViewer VerticalScrollBarVisibility="Auto" Margin="0" Template="{DynamicResource ScrollStyle}">   
-                    <VirtualizingStackPanel Orientation="Vertical">
-                        <Border BorderThickness="0,1,0,0">
-                            <Border.BorderBrush>
-                                <LinearGradientBrush EndPoint="1,1" StartPoint="0.5,0">
-                                    <GradientStop Color="#FFC5C5C5" Offset="0"/>
-                                    <GradientStop Color="White" Offset="1"/>
-                                </LinearGradientBrush>
-                            </Border.BorderBrush>
-                            <TextBlock Padding="5" Margin="0"><InlineUIContainer>
+    <Window.DataContext>
+        <Binding Path="Settings" Source="{StaticResource Locator}"/>
+    </Window.DataContext>
 
-									<CheckBox Margin="0,-3"/>
-								</InlineUIContainer><Run Text=" "/><InlineUIContainer>
-									<Image Margin="0,-5" Width="16" Source="\favicon.ico"/>
-								</InlineUIContainer><Run Text=" "/><InlineUIContainer>
-									<TextBlock><Run Text="Twitch.tv"/></TextBlock>
-								</InlineUIContainer><Run Text=" "/><InlineUIContainer>
-									<TextBlock><Hyperlink><Run Text="edit"/></Hyperlink></TextBlock>
-								</InlineUIContainer><Run Text=" "/><InlineUIContainer>
-									<TextBlock><Hyperlink><Run Text="restart"/></Hyperlink></TextBlock>
-								</InlineUIContainer></TextBlock>
-                        </Border>
-                    </VirtualizingStackPanel>
+    <Grid>
+        <fluent:BackstageTabControl SelectedIndex="0" Style="{DynamicResource SettingsStyle}" Background="#FF323232">
+            <fluent:BackstageTabItem Header="Chat" Background="#FF646464">
+                <ScrollViewer VerticalScrollBarVisibility="Auto" Margin="0" Template="{DynamicResource ScrollStyle}">
+                    <ItemsControl ItemsSource="{Binding Chats}">
+                        <ItemsControl.ItemTemplate>
+                            <DataTemplate>
+                                <View:SettingsChatItemView DataContext="{Binding}"/>
+                            </DataTemplate>
+                        </ItemsControl.ItemTemplate>
+                    </ItemsControl>
                 </ScrollViewer>
             </fluent:BackstageTabItem>
-            <fluent:BackstageTabItem Header="Scrobbling">
+            <fluent:BackstageTabItem Header="Music ticker">
                 <DockPanel>
-                    <TextBlock><Run Text="Test 2"/></TextBlock>
+                    <TextBlock><Run Text="Enable checkbox and scrobbling authentication"/></TextBlock>
                 </DockPanel>
             </fluent:BackstageTabItem>
             <fluent:BackstageTabItem Header="Theme">
                 <DockPanel>
-                    <TextBlock><Run Text="Test 2"/></TextBlock>
+                    <TextBlock><Run Text="Theme list with thumbnails"/></TextBlock>
                 </DockPanel>
             </fluent:BackstageTabItem>
             <fluent:BackstageTabItem Header="Other">
                 <DockPanel>
-                    <TextBlock><Run Text="Test 3"/></TextBlock>
+                    <TextBlock><Run Text="OBS settings, stream control..."/></TextBlock>
                 </DockPanel>
             </fluent:BackstageTabItem>
         </fluent:BackstageTabControl>
