--- a/Ubiquitous2/Skins/Main/ChatMessageSkin.xaml
+++ b/Ubiquitous2/Skins/Main/ChatMessageSkin.xaml
@@ -29,16 +29,12 @@
                                 </LinearGradientBrush>
                             </Border.Background>
                             <Grid Margin="-1,0,-1,3">
-                                <!--<Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="131*"/>
-                                    <ColumnDefinition Width="132*"/>
-                                </Grid.ColumnDefinitions>-->
                                 <Grid.RowDefinitions>
                                     <RowDefinition Height="18"/>
                                     <RowDefinition MinHeight="18"/>
                                 </Grid.RowDefinitions>
                                 <DockPanel Grid.Row="0" HorizontalAlignment="Stretch" Width="Auto">
-				                    <Image Stretch="Fill" Margin ="0,4,0,0" Width="12" Height="12" Source="{Binding Message.ImageSource, Mode=OneTime}" VerticalAlignment="Top" HorizontalAlignment="Left">
+				                    <Image Stretch="Fill" Margin ="0,4,0,0" Width="12" Height="12" Source="{Binding Message.ChatIconURL, Mode=OneTime}" VerticalAlignment="Top" HorizontalAlignment="Left">
 					                    <Image.Effect>
 						                    <DropShadowEffect BlurRadius="2" Opacity="0.2" ShadowDepth="2"/>
 					                    </Image.Effect>
@@ -46,8 +42,6 @@
                                     <TextBox FontSize="11" Text="{Binding Message.Channel,Mode=OneTime}" Margin="1,0,0,0" Foreground="#FFCB972F" HorizontalAlignment="Left" FontWeight="Bold"/>
 				                    <TextBox FontSize="11" Text="{Binding Message.FromUserName,Mode=OneTime}" Margin="0" Foreground="#FFFFC042" HorizontalAlignment="Left" FontWeight="Bold"/>
                                     <TextBox Text="{Binding Message.TimeStamp,Mode=OneTime}" FontSize="10" Foreground="#FFD69B33" TextAlignment="Right" DockPanel.Dock="Right" Margin="0,1,0,0" FontWeight="Bold" RenderTransformOrigin="0.5,0.5"/>
-
-
                                 </DockPanel>
                                 <Border Grid.ColumnSpan="2" Grid.Row="1" CornerRadius="10" Background="#FF303030" BorderThickness="0" Padding="1,2,1,0" Margin="0,0,0,-8">
                                     <TextBox TextAlignment="Justify" Text="{Binding Message.Text,Mode=OneTime}" FontSize="14" Foreground="#FFCDCDCD" Margin="0"/>
