--- a/Ubiquitous2/SettingsWindow.xaml
+++ b/Ubiquitous2/SettingsWindow.xaml
@@ -3,14 +3,14 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:fluent="clr-namespace:Fluent;assembly=Fluent"
         xmlns:local="clr-namespace:UB"
-        xmlns:devart="clr-namespace:Devart.Controls"
-        xmlns:View="clr-namespace:UB.View" x:Class="UB.SettingsWindow"
-        Title="SettingsWindow" Height="205" Width="445" Icon="ubiquitous smile.ico">
+        xmlns:Devart="clr-namespace:Devart.Controls"
+        xmlns:View="clr-namespace:UB.View"
+        xmlns:ViewModel="clr-namespace:UB.ViewModel"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d" x:Class="UB.SettingsWindow"
+        SnapsToDevicePixels="True"
+        Title="SettingsWindow" Icon="ubiquitous smile.ico" MinWidth="400" MinHeight="300" Width="400" Height="300" d:DesignHeight="297">
 
     <Window.Resources>
-        <Style TargetType="{x:Type VirtualizingStackPanel}">
-            <Setter Property="Margin" Value="10,10,0,0"/>
-        </Style>
         <Style TargetType="{x:Type TextBlock}">
             <Setter Property="Margin" Value="2,2,2,2"/>
         </Style>
@@ -22,16 +22,36 @@
 
     <Grid>
         <fluent:BackstageTabControl SelectedIndex="0" Style="{DynamicResource SettingsStyle}" Background="#FF323232">
-            <fluent:BackstageTabItem Header="Chat" Background="#FF646464">
-                <ScrollViewer VerticalScrollBarVisibility="Auto" Margin="0" Template="{DynamicResource ScrollStyle}">
-                    <ItemsControl ItemsSource="{Binding Chats}">
-                        <ItemsControl.ItemTemplate>
-                            <DataTemplate>
-                                <View:SettingsChatItemView DataContext="{Binding}"/>
-                            </DataTemplate>
-                        </ItemsControl.ItemTemplate>
-                    </ItemsControl>
-                </ScrollViewer>
+            <fluent:BackstageTabItem Header="Chat">
+                <ItemsControl ItemsSource="{Binding Chats}"
+					Padding="0"
+					HorizontalAlignment="Left"
+					HorizontalContentAlignment="Left"
+					Margin="0,0,-4,0"
+					VirtualizingPanel.IsVirtualizing="True"
+					VirtualizingPanel.VirtualizationMode="Recycling"
+					ScrollViewer.HorizontalScrollBarVisibility="Disabled"
+					ScrollViewer.VerticalScrollBarVisibility="Auto" Background="#FF494949">
+                    <ItemsControl.CacheMode>
+                        <BitmapCache EnableClearType="False" RenderAtScale="1" SnapsToDevicePixels="True"/>
+                    </ItemsControl.CacheMode>
+                    <ItemsControl.Template>
+                        <ControlTemplate>
+                            <ScrollViewer Template="{DynamicResource ScrollStyle}" CanContentScroll="True">
+                                <ItemsPresenter />
+                            </ScrollViewer>
+                        </ControlTemplate>
+                    </ItemsControl.Template>
+                    <ItemsControl.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <Devart:SmoothPanel Margin="0,0,-2,0" Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}">
+                                <Devart:SmoothPanel.Templates>
+                                    <Devart:SmoothPanelTemplate ViewModel="{x:Type ViewModel:SettingsChatItemViewModel}" View="{x:Type View:SettingsChatItemView}" />
+                                </Devart:SmoothPanel.Templates>
+                            </Devart:SmoothPanel>
+                        </ItemsPanelTemplate>
+                    </ItemsControl.ItemsPanel>
+                </ItemsControl>
             </fluent:BackstageTabItem>
             <fluent:BackstageTabItem Header="Music ticker">
                 <DockPanel>
