--- a/Ubiquitous2/Skins/Main/ChatBoxSkin.xaml
+++ b/Ubiquitous2/Skins/Main/ChatBoxSkin.xaml
@@ -11,18 +11,12 @@
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type UserControl}">
                     <DockPanel LastChildFill="True" Margin="0">
-                        <ItemsControl ItemsSource="{Binding Messages}"
-                      Padding="0"
-                      Margin="0,0,-4,0"
-                      VirtualizingStackPanel.IsVirtualizing="True"
-                      VirtualizingStackPanel.VirtualizationMode="Recycling"
-                      ScrollViewer.HorizontalScrollBarVisibility="Disabled"
-                      ScrollViewer.VerticalScrollBarVisibility="Auto">
+                        <ItemsControl ItemsSource="{Binding Messages}" Padding="0" Margin="0,0,-4,0">
                             <ItemsControl.Template>
                                 <ControlTemplate>
                                     <ScrollViewer Template="{DynamicResource ScrollStyle}" CanContentScroll="True">
                                         <i:Interaction.Triggers>
-                                            <Interactivity:DataEventTrigger EventName="MessageAdded">
+                                            <Interactivity:DataEventTrigger EventName="MessageAdded">                                                
                                                 <Interactivity:AutoScrollAction Duration="200"/>
                                             </Interactivity:DataEventTrigger>
                                         </i:Interaction.Triggers>
@@ -33,6 +27,9 @@
                             <ItemsControl.ItemsPanel>
                                 <ItemsPanelTemplate>
                                     <dc:SmoothPanel Margin="0,0,-2,0">
+                                        <dc:SmoothPanel.CacheMode>
+                                            <BitmapCache/>
+                                        </dc:SmoothPanel.CacheMode>
                                         <dc:SmoothPanel.Templates>
                                             <dc:SmoothPanelTemplate ViewModel="{x:Type ubviewmodel:ChatMessageViewModel}" View="{x:Type ubview:ChatMessageView}" />
                                         </dc:SmoothPanel.Templates>
