--- a/Ubiquitous2/Skins/Main/ChatBoxSkin.xaml
+++ b/Ubiquitous2/Skins/Main/ChatBoxSkin.xaml
@@ -17,7 +17,7 @@
                                     <ScrollViewer Template="{DynamicResource ScrollStyle}" CanContentScroll="True">
                                         <i:Interaction.Triggers>
                                             <Interactivity:DataEventTrigger EventName="MessageAdded">                                                
-                                                <Interactivity:AutoScrollAction Duration="200"/>
+                                                <Interactivity:AutoScrollAction Duration="100"/>
                                             </Interactivity:DataEventTrigger>
                                         </i:Interaction.Triggers>
                                         <ItemsPresenter />
@@ -26,7 +26,7 @@
                             </ItemsControl.Template>
                             <ItemsControl.ItemsPanel>
                                 <ItemsPanelTemplate>
-                                    <dc:SmoothPanel Margin="0,0,-2,0">
+                                    <dc:SmoothPanel VirtualizingPanel.CacheLength="5" VirtualizingPanel.CacheLengthUnit="Page" Margin="0,0,-2,0">
                                         <dc:SmoothPanel.CacheMode>
                                             <BitmapCache/>
                                         </dc:SmoothPanel.CacheMode>
