--- a/Ubiquitous2/Skins/Main/ChatMessageSkin.xaml
+++ b/Ubiquitous2/Skins/Main/ChatMessageSkin.xaml
@@ -35,42 +35,40 @@
                             <Setter Property="Stretch" Value="Fill"/>
                         </Style>
                     </ControlTemplate.Resources>
-                    <DockPanel>
-                        <DockPanel.CacheMode>
+                    <Border CornerRadius="10" Margin="1,0,1,5" BorderThickness="0,0,1,1" Padding="3,0,3,8">
+                        <Border.CacheMode>
                             <BitmapCache/>
-                        </DockPanel.CacheMode>
-                        <Border CornerRadius="10" Margin="1,0,1,5" BorderThickness="0,0,1,1" Padding="3,0,3,8">
-                            <Border.Background>
-                                <LinearGradientBrush EndPoint="200,165.008" MappingMode="Absolute" StartPoint="80,0">
-                                    <GradientStop Color="#FF4D4D4D" Offset="1"/>
-                                    <GradientStop Color="#FF383838" Offset="0.123"/>
-                                    <GradientStop Color="#FF515151" Offset="0.486"/>
-                                    <GradientStop Color="#FF3C3C3C" Offset="0.843"/>
-                                    <GradientStop Color="#FF424242" Offset="0.012"/>
-                                </LinearGradientBrush>
-                            </Border.Background>
-                            <Grid Margin="-1,0,-1,3">
-                                <Grid.RowDefinitions>
-                                    <RowDefinition Height="18"/>
-                                    <RowDefinition MinHeight="18"/>
-                                </Grid.RowDefinitions>
-                                <DockPanel Grid.Row="0" HorizontalAlignment="Stretch" Width="Auto">
-                                    <Image Stretch="Fill" Margin ="0,4,0,0" Width="12" Height="12" Source="{Binding Message.ChatIconURL, Mode=OneTime}" VerticalAlignment="Top" HorizontalAlignment="Left">
-                                        <Image.Effect>
-						                    <DropShadowEffect BlurRadius="2" Opacity="0.2" ShadowDepth="2"/>
-					                    </Image.Effect>
-				                    </Image>
-                                    <TextBox FontSize="11" Text="{Binding Message.Channel}" Margin="1,0,0,0" Foreground="#FFCB972F" HorizontalAlignment="Left" FontWeight="Bold"/>
-				                    <TextBox FontSize="11" Text="{Binding Message.FromUserName}" Margin="0" Foreground="#FFFFC042" HorizontalAlignment="Left" FontWeight="Bold"/>
-                                    <TextBox Text="{Binding Message.TimeStamp}" FontSize="10" Foreground="#FFD69B33" TextAlignment="Right" DockPanel.Dock="Right" Margin="0,1,0,0" FontWeight="Bold"/>
-                                </DockPanel>
-                                <Border Grid.ColumnSpan="2" Grid.Row="1" CornerRadius="10" Background="#FF303030" BorderThickness="0" Padding="1,2,1,0" Margin="0,0,0,-8">
-                                    <TextBlock TextAlignment="Justify" Margin="1,1,1,1" TextWrapping="Wrap" FontSize="14" Foreground="#FFCDCDCD" Interactivity:TextBlockAttached.InlineList="{Binding Message, Converter={StaticResource ResourceKey=textConverter}}"  UseLayoutRounding="True">
-                                    </TextBlock>
-                                </Border>
-                            </Grid>
-                        </Border>
-                    </DockPanel>
+                        </Border.CacheMode>
+                        <Border.Background>
+                            <LinearGradientBrush EndPoint="200,165.008" MappingMode="Absolute" StartPoint="80,0">
+                                <GradientStop Color="#FF4D4D4D" Offset="1"/>
+                                <GradientStop Color="#FF383838" Offset="0.123"/>
+                                <GradientStop Color="#FF515151" Offset="0.486"/>
+                                <GradientStop Color="#FF3C3C3C" Offset="0.843"/>
+                                <GradientStop Color="#FF424242" Offset="0.012"/>
+                            </LinearGradientBrush>
+                        </Border.Background>
+                        <Grid Margin="-1,0,-1,3">
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="18"/>
+                                <RowDefinition MinHeight="18"/>
+                            </Grid.RowDefinitions>
+                            <DockPanel Grid.Row="0" HorizontalAlignment="Stretch">
+                                <Image Stretch="Fill" Margin ="0,4,0,0" Width="12" Height="12" Source="{Binding Message.ChatIconURL, Mode=OneTime}" VerticalAlignment="Top" HorizontalAlignment="Left">
+                                    <Image.Effect>
+                                        <DropShadowEffect BlurRadius="2" Opacity="0.2" ShadowDepth="2"/>
+                                    </Image.Effect>
+                                </Image>
+                                <TextBox FontSize="11" Text="{Binding Message.Channel}" Margin="1,0,0,0" Foreground="#FFCB972F" HorizontalAlignment="Left" FontWeight="Bold"/>
+                                <TextBox FontSize="11" Text="{Binding Message.FromUserName}" Margin="0" Foreground="#FFFFC042" HorizontalAlignment="Left" FontWeight="Bold"/>
+                                <TextBox Text="{Binding Message.TimeStamp}" FontSize="10" Foreground="#FFD69B33" TextAlignment="Right" DockPanel.Dock="Right" Margin="0,1,0,0" FontWeight="Bold"/>
+                            </DockPanel>
+                            <Border Grid.ColumnSpan="2" Grid.Row="1" CornerRadius="10" Background="#FF303030" BorderThickness="0" Padding="1,2,1,0" Margin="0,0,0,-8">
+                                <TextBlock TextAlignment="Justify" Margin="1,1,1,1" TextWrapping="Wrap" FontSize="14" Foreground="#FFCDCDCD" Interactivity:TextBlockAttached.InlineList="{Binding Message, Converter={StaticResource ResourceKey=textConverter}}"  UseLayoutRounding="True">
+                                </TextBlock>
+                            </Border>
+                        </Grid>
+                    </Border>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
